# django-tailwind-setup

./: .gitignore  Readme.md  pyproject.toml
playground/: settings.py
